[package]
name = "jprett"
version = "0.1.0"
edition = "2024"
authors = ["Esurio"]
description = "A simple CLI tool to format json file."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
